advantages styles added

--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,19 +1,28 @@
 <!-- ADVANTAGES -->
 <section class="advantages">
-  <div class="container">
-    <h2>Advantages</h2>
-    <ul class="list">
-      <li>
-        <p>721</p>
-        <p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+  <div class="container advantages__container">
+    <h2 class="visually-hidden">Advantages</h2>
+    <ul class="list advantages__list">
+      <li class="advantages__item">
+        <div class="advantages__icon-bg advantages__icon-bg--cow"></div>
+        <p class="advantages__value">721</p>
+        <p class="advantages__text">
+          Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
+        </p>
       </li>
-      <li>
-        <p>16kg</p>
-        <p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+      <li class="advantages__item">
+        <div class="advantages__icon-bg advantages__icon-bg--weight"></div>
+        <p class="advantages__value">16kg</p>
+        <p class="advantages__text">
+          Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
+        </p>
       </li>
-      <li>
-        <p>84</p>
-        <p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+      <li class="advantages__item">
+        <div class="advantages__icon-bg advantages__icon-bg--ice-crema"></div>
+        <p class="advantages__value">84</p>
+        <p class="advantages__text">
+          Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
+        </p>
       </li>
     </ul>
   </div>
