--- a/src/sass/index.css
+++ b/src/sass/index.css
@@ -1280,72 +1280,31 @@ footer {
 }
 
 /* === GALLERY === */
+.gallery {
+  background: linear-gradient(to bottom, #84a178 64px, 0%, transparent 130px);
+}
+.gallery__container {
+  padding-top: 32px;
+  padding-bottom: 32px;
+}
 .gallery__list {
   position: relative;
   margin: 0 auto;
   width: 280px;
-  height: 117px;
+  height: 130px;
+  border-radius: 8px;
+  overflow: hidden;
+  outline: 1px solid black;
 }
-@-webkit-keyframes gallery-fade {
-  0% {
-    opacity: 1;
-  }
-  28% {
-    opacity: 1;
-  }
-  33% {
-    opacity: 0;
-  }
-  94% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-@keyframes gallery-fade {
-  0% {
-    opacity: 1;
-  }
-  28% {
-    opacity: 1;
-  }
-  33% {
-    opacity: 0;
-  }
-  94% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-.gallery__item {
+.gallery__picture {
   position: absolute;
+  top: 0;
   left: 0;
-  height: 117px;
-  -webkit-animation-name: gallery-fade;
-          animation-name: gallery-fade;
-  -webkit-animation-timing-function: ease-in-out;
-          animation-timing-function: ease-in-out;
-  -webkit-animation-iteration-count: infinite;
-          animation-iteration-count: infinite;
-  -webkit-animation-duration: 10s;
-          animation-duration: 10s;
-  -webkit-animation-direction: alternate;
-          animation-direction: alternate;
-}
-.gallery__item:nth-of-type(1) {
-  -webkit-animation-delay: 6s;
-          animation-delay: 6s;
-}
-.gallery__item:nth-of-type(2) {
-  -webkit-animation-delay: 3s;
-          animation-delay: 3s;
-}
-.gallery__item:nth-of-type(3) {
-  -webkit-animation-delay: 0s;
-          animation-delay: 0s;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 /* === FOOTER ==== */
