--- a/src/sass/layout/_gallery.scss
+++ b/src/sass/layout/_gallery.scss
@@ -1,56 +1,41 @@
 /* === GALLERY === */
 
 .gallery {
+  background: linear-gradient(
+    to bottom,
+    $mainBgColor 64px,
+    0%,
+    transparent 130px
+  );
+
+  &__container {
+    padding-top: 32px;
+    padding-bottom: 32px;
+  }
+
   &__list {
     position: relative;
 
     margin: 0 auto;
 
     width: 280px;
-    height: 117px;
+    height: 130px;
+    border-radius: 8px;
+    overflow: hidden;
+    outline: 1px solid black;
   }
 
-  @keyframes gallery-fade {
-    0% {
-      opacity: 1;
-    }
-    28% {
-      opacity: 1;
-    }
-    33% {
-      opacity: 0;
-    }
-    94% {
-      opacity: 0;
-    }
-    100% {
-      opacity: 1;
-    }
-  }
-
-  &__item {
+  &__picture {
     position: absolute;
+    top: 0;
     left: 0;
 
-    height: 117px;
-    // transition: opacity 1s ease-in-out;
+    // flex is used for object-fit to work with picture
+    display: flex;
 
-    animation-name: gallery-fade;
-    animation-timing-function: ease-in-out;
-    animation-iteration-count: infinite;
-    animation-duration: 10s;
-    animation-direction: alternate;
+    width: 100%;
+    height: 100%;
 
-    &:nth-of-type(1) {
-      animation-delay: 6s;
-    }
-
-    &:nth-of-type(2) {
-      animation-delay: 3s;
-    }
-
-    &:nth-of-type(3) {
-      animation-delay: 0s;
-    }
+    object-fit: cover;
   }
 }
