--- a/src/sass/index.css
+++ b/src/sass/index.css
@@ -1283,9 +1283,31 @@ footer {
 .gallery {
   background: linear-gradient(to bottom, #84a178 64px, 0%, transparent 130px);
 }
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .gallery {
+    background: linear-gradient(to bottom, #84a178 204px, 0%, transparent 243px);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .gallery {
+    background: linear-gradient(to bottom, #84a178 178px, 0%, transparent 404px);
+  }
+}
 .gallery__container {
   padding-top: 32px;
   padding-bottom: 32px;
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .gallery__container {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .gallery__container {
+    padding-top: 80px;
+    padding-bottom: 80px;
+  }
 }
 .gallery__list {
   position: relative;
@@ -1295,6 +1317,20 @@ footer {
   border-radius: 8px;
   overflow: hidden;
   outline: 1px solid black;
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .gallery__list {
+    width: 704px;
+    height: 327px;
+    border-radius: 18px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .gallery__list {
+    width: 1013px;
+    height: 422px;
+    border-radius: 24px;
+  }
 }
 .gallery__picture {
   position: absolute;
